--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -4,7 +4,7 @@
 		#menucf-profile {
 			background:#fafafa;
 		}
-
+		
 	</style>
 {% endblock%}
 
@@ -16,23 +16,31 @@
 {% endblock %}
 
 {% block cf-form %}
+	<!--
+	Cambiar imagen <input class="actual" type="password" name="Contraseña actual." value="actual"><br>
+	<input id="btn" type="submit" value="Guardar cambios">
+	-->
 	<form id='formulario' method='post' enctype='multipart/form-data' action=''>{% csrf_token %}
-    <div class="col-lg-12">
 	<div class="profilex">
 	{% if user_profile.profile.image %}
 	<img src="{{user_profile.profile.image.url}}" class="img-circle">
 	{% else %}
-	<img src="{{STATIC_URL}}img/nuevo.png" class="img-circle">
+	<img src="{{STATIC_URL}}img/generic-avatar.png" class="img-circle">
 	{% endif %}
-		{{ user_form }}
+	<div class="nameConfig">
+		<p>{{ user_form.first_name.errors}}</p>
+		<p>¿Como te llamas?</p>
+		{{ user_form.first_name }}
 	</div>
-    </div>
-    <div class="col-lg-10">
+	<div class="lastConfig">
+		<p>{{ user_form.last_name.errors }}</p>
+		<p>¿Y tu apellido?</p>
+		{{ user_form.last_name }}
+	</div>
+	</div>
 	<div class="chg">
-    	{{ perfil_form }}
+    	{{ perfil_form.as_ul }}
+		<button class="btn btn-info" id="boton-perfil" type="submit">Salvar cambios</button>
 		</div>
-        </div>
-	<button class="btn btn-info" id="boton-perfil" type="submit">Salvar cambios</button>
 	</form>
-	
 {% endblock %}
