--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -328,17 +328,12 @@ span[class*="fa-paper-plane"] {
   cursor:pointer;
   float:left;
   display: block;
-  font-size:38px;
+  font-size: 2em;
   text-align: center;
-  height:100px;
+  height: 100%;
   width:70px;
-  line-height:55px;
-  padding:38px 20px;
+  padding: 30px 20px;
   opacity: 1;
-  -webkit-transition:.5s;
-  -moz-transition:.5s;
-  -o-transition:.5s;
-  transition:.5s;
   z-index:2;
   position: relative;
 }
@@ -346,17 +341,13 @@ span[class*="fa-cog"] {
   cursor:pointer;
   float:left;
   display: block;
-  font-size:38px;
-  height:100px;
+  font-size: 2em;
+  height: 100%;
   width:70px;
   line-height:55px;
   text-align: center;
-  padding:38px 20px;
+  padding: 30px 20px;
   opacity:1;
-  -webkit-transition:.5s;
-  -moz-transition:.5s;
-  -o-transition:.5s;
-  transition:.5s;
   z-index:2;
   position: relative;
 }
@@ -364,17 +355,12 @@ span[class*="fa-users"] {
   cursor:pointer;
   float:left;
   display: block;
-  font-size:38px;
-  height:100px;
+  font-size: 2em;
+  height: 100%;
   text-align: center;
-  width:70px;
-  line-height:55px;
-  padding:38px 20px;
+  width: 70px;
+  padding: 30px 20px;
   opacity:1;
-  -webkit-transition:.5s;
-  -moz-transition:.5s;
-  -o-transition:.5s;
-  transition:.5s;
   z-index:2;
   position: relative;
 }
@@ -383,17 +369,12 @@ span[class*="fa-plus"] {
   cursor:pointer;
   float:left;
   display: block;
-  font-size:38px;
-  height:100px;
+  font-size: 2em;
+  height: 100%;
   text-align: center;
-  width:70px;
-  line-height:55px;
-  padding:38px 20px;
+  width: 70px;
+  padding: 30px 20px;
   opacity:1;
-  -webkit-transition:.5s;
-  -moz-transition:.5s;
-  -o-transition:.5s;
-  transition:.5s;
   z-index: 2;
   position: relative;
 
@@ -404,16 +385,12 @@ span[class*="fa-heart"] {
   float:left;
   display: block;
   text-align: center;
-  font-size:38px;
-  height:100px;
+  font-size: 2em;
+  height: 100%;
   width:70px;
   line-height:55px;
-  padding:38px 20px;
+  padding: 30px 20px;
   opacity:1;
-  -webkit-transition:.5s;
-  -moz-transition:.5s;
-  -o-transition:.5s;
-  transition:.5s;
   z-index: 2;
   position: relative;
 }
@@ -448,94 +425,54 @@ span[class*="heart"]:hover {
     cursor: pointer;
     position: relative;
     font-family: Tahoma, Arial;
-    -webkit-perspective: 2000px;
-       -moz-perspective: 2000px;
-        -ms-perspective: 2000px;
-         -o-perspective: 2000px;
-            perspective: 2000px;
-  }
-.item {
-    height: 20px;
-      -webkit-transform-style: preserve-3d;
-         -moz-transform-style: preserve-3d;
-          -ms-transform-style: preserve-3d;
-           -o-transform-style: preserve-3d;
-              transform-style: preserve-3d;
-      -webkit-transition: -webkit-transform .7s;
-         -moz-transition: -moz-transform .7s;
-          -ms-transition: -ms-transform .7s;
-           -o-transition: -o-transform .7s;
-              transition: transform .7s;
+    -webkit-transition:.5s;
+    -moz-transition:.5s;
+    -o-transition:.5s;
+    transition:.5s;
   }
 
-    .item:hover {
-      -webkit-transform: translateZ(-50px) rotateX(95deg);
-         -moz-transform: translateZ(-50px) rotateX(95deg);
-          -ms-transform: translateZ(-50px) rotateX(95deg);
-           -o-transform: translateZ(-50px) rotateX(95deg);
-              transform: translateZ(-50px) rotateX(95deg);
+  .item:hover img {
+    box-shadow: none;
+    border-radius: 10px;
+  }
+
+  .item:hover .informacion {
+    box-shadow: 0px 3px 8px rgba(0,0,0,0.3);
+    border-radius: 3px;
+  }
+
+  .item img {
+    display: block;
+    position: absolute;
+    top: 0;
+    border-radius: 3px;
+    box-shadow: 0px 3px 8px rgba(0,0,0,0.3);
+  }
+
+  .item .informacion {
+    display: block;
+    position: absolute;
+    top: -13.5em;
+    left: -46px;
+    height: 76px;
+    width: 210px;
+    border-radius: 15px;
+    padding: 0px;
+    font-size: 12px;
+    text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
+    box-shadow: none;
+    background: rgb(236,241,244);
+    margin-top: 70px;
+    opacity: 0.7;
+    }
+    .item .informacion:hover {
+      opacity :1;
     }
 
-      .item:hover img {
-        box-shadow: none;
-        border-radius: 10px;
-      }
-
-      .item:hover .informacion {
-        box-shadow: 0px 3px 8px rgba(0,0,0,0.3);
-        border-radius: 3px;
-      }
-
-    .item img {
-      display: block;
-      position: absolute;
-      top: 0;
-      border-radius: 3px;
-      box-shadow: 0px 3px 8px rgba(0,0,0,0.3);
-      -webkit-transform: translateZ(50px);
-         -moz-transform: translateZ(50px);
-          -ms-transform: translateZ(50px);
-           -o-transform: translateZ(50px);
-              transform: translateZ(50px);
-      -webkit-transition: all .6s;
-         -moz-transition: all .6s;
-          -ms-transition: all .6s;
-           -o-transition: all .6s;
-              transition: all .6s;
-
-    }
-
-    .item .informacion {
-      display: block;
-      position: absolute;
-      top: -90px;
-    left: -50px;
-      height: 80px;
-      width: 210px;
-      text-align: left;
-      border-radius: 15px;
-      padding: 0px;
-      font-size: 12px;
-      text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
-      box-shadow: none;
-      background: rgb(236,241,244);
-      -webkit-transform: rotateX(-70deg) translateZ(70px);
-         -moz-transform: rotateX(-70deg) translateZ(70px);
-          -ms-transform: rotateX(-70deg) translateZ(70px);
-           -o-transform: rotateX(-70deg) translateZ(70px);
-              transform: rotateX(-70deg) translateZ(70px);
-      -webkit-transition: all .7s;
-         -moz-transition: all .7s;
-          -ms-transition: all .7s;
-           -o-transition: all .7s;
-              transition: all .7s;
-
-    }
 .informacion strong {
     border-bottom: 1px solid #CCCCCC;
     display: block;
     font-size: 18px;
-
     text-align: center;
 }
 .informacion a {
