--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -482,7 +482,7 @@ body > .container {
     width: 100%;
     min-height: 351.567px;
     max-height: 351.567px;
-    border-bottom: 2px solid #1e88e5;
+    border-bottom: 3px solid #1e88e5;
     border-top-left-radius: 0.3rem;
     border-top-right-radius: 0.3rem; }
     .user-card .user-avatar .user-bg:after {
@@ -495,14 +495,13 @@ body > .container {
     padding: 0.1em;
     border: 1px solid #1e88e5;
     border-radius: 0.3rem;
-    margin-top: -10em;
+    margin-top: -16.7em;
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.35); }
 .user-pic{
-
-  width: 110px;
-  height: 110px;
-
+    width: 120px;
+    height: 120px;
 }
+
 
 /* Recolocamos la caja y la imagen */
 
@@ -1190,11 +1189,11 @@ a {
   width:100%;
 
 }
-#tab-amigos ul.list-friends li a:hover, img:hover {
+#tab-amigos ul.list-friends li a:hover {
   opacity: 0.5;
   transition: all .2s ease-in;
 }
-#tab-amigos ul.list-friends li img:hover {
+#tab-amigos ul.list-friends li {
   border: 1px solid #D2FF78;
 }
 
