--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -87,14 +87,15 @@ a, a:visited {
 .image{
   float:left;
   position: relative;
-  top: 10px;
-  left: 10px;
+  top: 5px;
+  left: 5px;
   cursor:pointer;
-  border: 2px solid #1e88e5;
+  box-shadow: 0 1px 5px #1976d2;
+  border: 1px solid #eee;
   padding: 0 0;
-  width:100px;
-  height:100px;
-  border-radius: 100%;
+  width: 120px;
+  height: 140px;
+  border-radius: 3px;
   overflow:hidden;
 }
 .usr-img {
