--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -41,8 +41,8 @@
   <div class="col-lg-8 col-md-6 col-sm-12">
 <!-- Contenedor principal, engloba el tablon, widgets... [IMPORTANTE]-->
     <div class="container">
-
-      <div class="col-lg-12 col-md-6 col-sm-12">
+    <!-- Para el diseño de la rama develop, se cambia col-md-6 por col-md-12 -->
+      <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="user-card card">
           <nav class="ventana-pin">
             <a><i class="fa fa-times"></i></a>
