--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -518,11 +518,14 @@ body > .container {
   position: relative;
 }
 
-.user-card header, .user-card .status {
+.user-card header {
   text-align: center;
-  padding: 0 1.5em; }
+  padding: 0 1.5em;
+  display: block;
+  margin-top: -40px;
+}
 .user-card header h1 {
-  margin-top: 0.35em;
+  margin-top: 3.35em;
   margin-bottom: 0; }
 .user-card header p {
   color: #717a7e;
