--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -9,20 +9,22 @@
     
     <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/buscar.css" />
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/comentarios.css" />
-    <link rel="stylesheet" href="{{STATIC_URL}}css/colorbox.css" />
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/timeline.css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
-    <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/amigos.css"/>
     <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
-  
+
+
+
+    <!-- bloques de estilos para cada pagina -->
+    {% block extra-css %}
+
+    {% endblock %}
+    
   	{% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
   
     {% block include_files %}{% endblock %}
   
     <script>
-    
       window.moveTo(0,0);
       if (document.all) {
         top.window.resizeTo(screen.availWidth,screen.availHeight);
@@ -36,86 +38,20 @@
     </script>
   </head>
   <body>
+
+    <!-- Header de la pagina --> 
     {% block barra_navegacion %}
-    <nav class="box-tool">
-    <ul class="box-tool-wrapper">
-      <li>
-        <div id="toggle">
-          <ul class="menup">
-              {% if request.user.profile.image %}
-                <li class="profilee"><img src="{{ request.user.profile.image.url }}"><i onclick="location.href='/profile/{{ request.user }}'">{{ request.user.username }}</i></li>
-              {% else %}
-               <li class="profilee"><img src="{{STATIC_URL}}img/nuevo.png"><i onclick="location.href='/profile/{{ request.user }}'">{{ request.user.username }}</i></li>
-              {% endif %}
-            <li onclick="location.href='/config/profile'"><i class="fa fa-cog fa-lg"></i> Configuracion </li>
-            <li onclick="location.href='/messages/inbox/'"><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
-            <li class="shortcut-keyboard"><i class="fa fa-keyboard-o"></i> Atajos</li>
-              <li class="shortcut-keyboard" onclick="location.href='{% url 'account_logout' %}'"><i class="fa fa-sign-out"></i> Salir</li>
-            <li onclick="location.href='/about/home'">Ayuda</li>
-          </ul>
-        </div>
-      </li>
-      
-      <li><div class="field" id="searchform">
-        <form method='post' action='/search/'>{% csrf_token %}
-          {{searchForm}}    
-        </form>
-        <!-- Logotipo que re-direcciona a la pagina principal -->
-        <li>
-          <div class="logotipo_skyfolk" onclick="location.href='/'"></div>
-        </li>
-        <li class="fa fa-comment fa-lg"> </li>
-        <li class="fa fa-bell fa-lg"><em onclick="contador()">{{n_likes}}</em></li>
-      <ul class="fa fa-bars fa-lg">
-            {% if user.profile.hiddenMenu == False %} <!-- Elección del usuario el menu a mostrar -->
-        <li class="fa-bars-content">
-          <ul>
-              <li class="fa fa-paper-plane fa-2x" id="publish2"> </li>
-              <li class="fa fa-home fa-2x" onclick="location.href='/'"> </li>
-              <li class="fa fa-users fa-2x" onclick="location.href='/friends/{{ request.user }}'"> </li>
-              <li class="fa fa-sign-out fa-2x" onclick="location.href='{% url 'account_logout' %}'"> </li>
-                {% if request.user.profile.image %}
-                  <li class="profile-user" onclick="location.href='/profile/{{ request.user }}'">
-                    <img src="{{request.user.profile.image.url}}">
-                  </li>
-                {% else %}
-                  <li class="profile-user" onclick="location.href='/profile/{{ request.user }}'">
-                    <img src="{{STATIC_URL}}img/nuevo.png">
-                  </li>
-                {% endif %}
-          </ul>
-        </li>
-        {% endif %}
-      </ul>
-      {% if showPerfilButtons or user.username == user_profile.username %}
-      <!-- BOTONES ESPACIALES PARA EL USUARIO QUE HACE LOGIN, SÓLO VISIBLE POR EL USUARIO QUE INICIA SESIÓN -->
-      {% endif %}
-      <!-- Menu principal - circular -->
-    </ul>
-    {% if user.profile.hiddenMenu == True %}
-      <ul class="oldMenu">
-        <li id="publish2"><i class="fa  fa-paper-plane"> </i> Mensaje</li>
-        <li onclick="location.href='/'"><i class="fa fa-home" ></i> Inicio</li>
-        <li onclick="location.href='/friends/{{ request.user }}'"><i class="fa fa-users"></i> Seguidos</li>
-        <li onclick="location.href='{% url 'account_logout' %}'"><i class="fa fa-sign-out"></i> Salir</li>
-      </ul>
-    {% endif %}
-    </nav>
-        <script src="{{STATIC_URL}}js/jquery.min.js"></script>
-        <script src="{{STATIC_URL}}js/jquery-ui.js"></script>
-        <script src="{{STATIC_URL}}js/jquery.easytabs.js"></script>
-        <script src="{{STATIC_URL}}js/jquery.gritter.js"></script>
-        <script src="{{STATIC_URL}}js/profile.js"></script>
-        <script src="{{STATIC_URL}}js/jquery.colorbox.js"></script>
-        <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
-        <script src="{{STATIC_URL}}js/scrollReveal.js"></script>
-        <script src="{{STATIC_URL}}js/scrollReveal.min.js"></script>
-        <script src="{{STATIC_URL}}js/friends.js"></script>
-        <!-- Sweet Alert -->
-        <link rel="stylesheet" href="{{STATIC_URL}}dist/sweetalert.css">
-        <link rel="stylesheet" href="{{STATIC_URL}}themes/google/google.css">
-        <script src="{{STATIC_URL}}dist/sweetalert.min.js"></script>
+      {% include "account/base-header.html" %}
     {% endblock %}
-    {% block content %}{% endblock %}
+
+    {% block content %}
+    <!-- Contenido de cada pagina por separado -->
+    {% endblock %}
+    <!-- bloque de js para cada pagina -->
+    {% block extra-js %}
+
+    {% endblock %}
+<script src="{{STATIC_URL}}js/profile.js"></script>
+
   </body>
 </html>
