--- a/skyfolk/templates/account/base_search.html
+++ b/skyfolk/templates/account/base_search.html
@@ -1,8 +1,14 @@
 {% extends 'account/base_interface.html' %}
 {% load app_filters %}
 {% block title %} <title>Buscar contactos</title> {% endblock %}
+{% block extra-css %}
+    <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/amigos.css"/>
+{% endblock %}
+
 {% block content %}
+
 {% block messages %}
 {% endblock %}
+
 {% endblock %}
 
