--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1757,14 +1757,12 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 
 #page-wrapper {
-  width: 650px;
-  top:-700px;
+  width: 50%;
   background: #FFF;
   padding: 1em;
   margin: 1em auto;
   border-top: 5px solid rgba(44,44,44,0.777);
   box-shadow: 0 2px 10px rgba(0,0,0,0.8);
-  opacity: 0.6;
   border-radius: 7px;
   cursor: move;
   font-family: 'Open Sans', sans-serif;
@@ -1772,16 +1770,33 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   /*CENTRADO*/
   overflow: hidden;
   position: absolute;
-  left: 50%;
   top: 50%;
   margin-top: -100px;
-  margin-left: -292px; /*150px*/
+  margin-right: auto;
+  margin-left: auto;
+  right: 0;
+  left: 0;
   resize: none;
   z-index: 9999;
 
 }
 
+@media only screen and (min-width: 200px) and (max-width: 640px) {
+      #page-wrapper {
+          left: 45%;
+    }
+    #message2 {
+        font-size: 1.2em !important;
+    }
+}
 
+
+#page-wrapper:hover {
+  border-top: 4px solid #1e88e5;
+}
+#page-wrapper #status {
+  font-size: 1.4em;
+}
 h1 {
   margin-top: 0;
 }
@@ -1808,11 +1823,11 @@ h1 {
 #message2 {
   width: 100%;
   padding: 0.5rem;
-  font-size: 1rem;
+  font-size: 1.5em;
   border: 1px solid #D9D9D9;
   border-radius: 3px;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
-  min-height: 100px;
+  min-height: 200px;
   margin-bottom: 1rem;
   font-family: 'Open Sans', sans-serif;
   display: block;
@@ -1847,10 +1862,6 @@ button[type="submit"] {
 button:hover {
   opacity: 0.75;
   cursor: pointer;
-}
-#page-wrapper:hover {
-  opacity: 1;
-  border-top: 4px solid #1e88e5;
 }
 #tab-timeline {
   height:100%;
