--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -223,7 +223,7 @@
           </ul>
         </div>
       </div>
-
+      <!-- PIN GRANDE 1 -->
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="stock card">
             <nav class="ventana-pin">
@@ -231,9 +231,118 @@
               <a><i class="fa fa-expand"></i></a>
               <a><i class="fa fa-thumb-tack"></i></a>
           </nav>
+                  <!-- Widget encuestas -->
+         <div class="wrapper">
+            <div class="widget-wr">
+               <div class="widget-wr-ans">
+              <img src="http://www.telegraph.co.uk/travel/destination/article125984.ece/ALTERNATES/w620/bostonwaterfront.jpg">
+              <span class="wr-tittle">¿Debería viajar aquí?</span>
+            </div>
+             <div class="widget-options">
+                <button type="submit" class="fa fa-heart widget-ok"></button>
+               <button type="submit" class="fa fa-times widget-no"></button>
+               <span class="widget-result">
+                 <i class="widget-result-no">56</i>
+                 <i class="widget-result-ok">44</i>
+               </span>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
+    <!-- PIN PEQUEÑO - 2 -->
+   <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="stock card">
+            <nav class="ventana-pin">
+              <a><i class="fa fa-times"></i></a>
+              <a><i class="fa fa-expand"></i></a>
+              <a><i class="fa fa-thumb-tack"></i></a>
+          </nav>
+                  <!-- Widget encuestas -->
+         <div class="wrapper">
+            <div class="widget-wr">
+               <div class="widget-wr-ans">
+              <img src="http://www.telegraph.co.uk/travel/destination/article125984.ece/ALTERNATES/w620/bostonwaterfront.jpg">
+              <span class="wr-tittle">¿Debería viajar aquí?</span>
+            </div>
+             <div class="widget-options">
+                <button type="submit" class="fa fa-heart widget-ok"></button>
+               <button type="submit" class="fa fa-times widget-no"></button>
+               <span class="widget-result">
+                 <i class="widget-result-no">56</i>
+                 <i class="widget-result-ok">44</i>
+               </span>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+
     </div>
+
+    
+        <div class="vbox">
+            <div class="user-video">
+                <button class="play-user-video"><span class="fa fa-play"></span></button>
+            </div>
+            <div class="user-video">
+                <button class="play-user-video"><span class="fa fa-play"></span></button>
+            </div>
+            <div class="user-video">
+                <button class="play-user-video"><span class="fa fa-play"></span></button>
+            </div>
+            <div class="user-video">
+                <button class="play-user-video"><span class="fa fa-play"></span></button>
+            </div>
+            <div class="user-video">
+                <button class="play-user-video"><span class="fa fa-play"></span></button>
+            </div>
+            <div class="user-video">
+                <button class="play-user-video"><span class="fa fa-play"></span></button>
+            </div>
+            <div class="user-video">
+                <button class="play-user-video"><span class="fa fa-play"></span></button>
+            </div>
+            <div class="user-video">
+                <button class="play-user-video"><span class="fa fa-play"></span></button>
+            </div>
+            </div>
+            <!--
+          <div class="thumbnail"></div>
+          <button class="play-btn"><span class="fa fa-play"></span></button>
+            -->
+        <ul class="unstyled controls table">
+          <li class="play">
+            <button><span class="fa fa-play"></span></button>
+          </li>
+          <li class="timeline">
+            <div class="progress-bar">
+              <div class="bar">
+                <div class="progress">
+                  <div class="value"></div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="volume-ctl">
+            <ul class="unstyled table">
+              <li class="volume-btn">
+                <button><span class="fa fa-volume-up"></span></button>
+              </li>
+              <li class="volume-bar">
+                <div class="progress-bar">
+                  <div class="bar">
+                    <div class="value"></div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <li class="fullscreen">
+            <button><span class="fa fa-desktop"></span></button>
+          </li>
+        </ul>
+      
     <!-- Contenedor principal -->
     <div class="container">
     </div>
