--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -279,8 +279,8 @@
       </div>
 
     </div>
-
-    
+      <!-- Pin Grande -->
+      <div class="video-player card">
         <div class="vbox">
             <div class="user-video">
                 <button class="play-user-video"><span class="fa fa-play"></span></button>
@@ -307,6 +307,42 @@
                 <button class="play-user-video"><span class="fa fa-play"></span></button>
             </div>
             </div>
+            <!--
+          <div class="thumbnail"></div>
+          <button class="play-btn"><span class="fa fa-play"></span></button>
+            -->
+        <ul class="unstyled controls table">
+          <li class="play">
+            <button><span class="fa fa-play"></span></button>
+          </li>
+          <li class="timeline">
+            <div class="progress-bar">
+              <div class="bar">
+                <div class="progress">
+                  <div class="value"></div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="volume-ctl">
+            <ul class="unstyled table">
+              <li class="volume-btn">
+                <button><span class="fa fa-volume-up"></span></button>
+              </li>
+              <li class="volume-bar">
+                <div class="progress-bar">
+                  <div class="bar">
+                    <div class="value"></div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <li class="fullscreen">
+            <button><span class="fa fa-desktop"></span></button>
+          </li>
+        </ul>
+      </div>
             <!--
           <div class="thumbnail"></div>
           <button class="play-btn"><span class="fa fa-play"></span></button>
