--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -62,5 +62,17 @@
       </ul>
     {% endif %}
     </nav>
+    <script src="{{STATIC_URL}}js/jquery.min.js"></script>
+    <script src="{{STATIC_URL}}js/jquery-ui.js"></script>
+    <script src="{{STATIC_URL}}js/jquery.easytabs.js"></script>
+    <script src="{{STATIC_URL}}js/jquery.gritter.js"></script>
+    <script src="{{STATIC_URL}}js/profile.js"></script>
+    <script src="{{STATIC_URL}}js/jquery.colorbox.js"></script>
+    <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
+    <script src="{{STATIC_URL}}js/scrollReveal.js"></script>
+    <script src="{{STATIC_URL}}js/scrollReveal.min.js"></script>
+<!-- Sweet Alert -->
 
-    
+    <link rel="stylesheet" href="{{STATIC_URL}}dist/sweetalert.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}themes/google/google.css">
+    <script src="{{STATIC_URL}}dist/sweetalert.min.js"></script>
