--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -97,6 +97,7 @@
         <li id="publish2"><i class="fa  fa-paper-plane"> </i> Mensaje</li>
         <li onclick="location.href='/'"><i class="fa fa-home" ></i> Inicio</li>
         <li onclick="location.href='/friends/{{ request.user }}'"><i class="fa fa-users"></i> Seguidos</li>
+        <li id="agregar-amigo-pin"><i class="fa  fa-user-plus"> </i> Agregar</li>
         <li onclick="location.href='{% url 'account_logout' %}'"><i class="fa fa-sign-out"></i> Salir</li>
       </ul>
     {% endif %}
