--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1769,7 +1769,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
   /*CENTRADO*/
   overflow: hidden;
-  position: absolute;
+  position: fixed;
   top: 50%;
   margin-top: -100px;
   margin-right: auto;
@@ -1834,31 +1834,48 @@ h1 {
   resize: none;
 }
 
-button[type="button"] {
+#page-wrapper button[type="button"] {
+  border: medium none;
+  border-radius: 2px;
   display: inline-block;
-  border-radius: 3px;
-  border: none;
-  font-size: 0.9rem;
-  padding: 0.7rem 1em;
-  color: #FF0000;
-  margin: 0 0.25rem;
+  height: 36px;
+  line-height: 36px;
+  padding: 0px 2rem;
+  text-transform: uppercase;
+  vertical-align: middle;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+  text-decoration: none;
+  color: #FFF;
+  background-color: #26A69A;
   text-align: center;
-  background: #e0e0e0;
+  letter-spacing: 0.5px;
+  transition: all 0.2s ease-out 0s;
+  cursor: pointer;
+  float: right;
+  outline: none;
 }
 
-button[type="submit"] {
-  background: #e0e0e0;
-  border-bottom: 1px solid #7CE1FF;
+#page-wrapper button[type="submit"] {
+  border: medium none;
+  border-radius: 2px;
   display: inline-block;
-  border-radius: 3px;
-  border: none;
-  font-size: 0.9rem;
-  padding: 0.6rem 1em;
-  color: #1e88e5;
-  margin: 0 0.25rem;
+  height: 36px;
+  line-height: 36px;
+  padding: 0px 2rem;
+  text-transform: uppercase;
+  vertical-align: middle;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+  text-decoration: none;
+  color: #FFF;
+  background-color: #26A69A;
   text-align: center;
+  letter-spacing: 0.5px;
+  transition: all 0.2s ease-out 0s;
+  cursor: pointer;
+  float: right;
+  margin-right: 7px;
+  outline: none;
 }
-
 button:hover {
   opacity: 0.75;
   cursor: pointer;
@@ -1876,7 +1893,7 @@ button:hover {
     border: none;
     font-size: 1.1rem;
     padding: 1rem 1em;
-    float: right;
+    float: left;
     color: #1e88e5;
     top: 10px;
     margin: 0 0.25rem;
@@ -1894,7 +1911,7 @@ button:hover {
     border: none;
     font-size: 1.1rem;
     padding: 1rem 1em;
-    float: right;
+    float: left;
     color: #1e88e5;
     top: 10px;
     margin: 0 0.25rem;
@@ -1912,7 +1929,7 @@ button:hover {
     border: none;
     font-size: 1.1rem;
     padding: 1rem 1em;
-    float: right;
+    float: left;
     color: #1e88e5;
     top: 10px;
     margin: 0 0.25rem;
