--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -23,7 +23,7 @@
         </form>
         <!-- Logotipo que re-direcciona a la pagina principal -->
         <li>
-          <div class="logotipo_skyfolk" onclick="location.href='/'"></div>
+          <div class="logotipo_skyfolk" style="background-image: url('{{STATIC_URL}}img/logo.png');" onclick="location.href='/'"></div>
         </li>
         <li class="fa fa-comment fa-lg"> </li>
         <li class="fa fa-bell fa-lg"><em onclick="contador()">{{n_likes}}</em></li>
