--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -24,12 +24,12 @@
     <div class="ventana_m">
       <ul class="conver">
         <li>
-          <div class="me"><img src="http://e.fastcompany.net/multisite_files/fastcompany/slideshow/2013/05/3010031-slide-slide-3-how-to-talk-like-a-most-creative-person.jpg">
+          <div class="me"><img src="{{STATIC_URL}}img/logo.png">
             <p>Hey!, check your inbox!</p>
           </div>
         </li>
         <li>
-          <div class="you"><img src="http://itspronouncedmetrosexual.com/wp-content/themes/ipmtheme/library/images/sam-killermann-headshot.jpg">
+          <div class="you"><img src="{{STATIC_URL}}img/logo.png">
             <p>Ok! I send you a message with your information.</p>
           </div>
         </li>
@@ -137,15 +137,15 @@
                       <h3 class="trofeos-title">Logros de {{ user_profile.username }}</h3>
                       <div class="wrapper-trofeos">
                           <div class="col-sm-3 col-md-3 col-lg-4">
-                            <span class="trofeo-desb"><img src="https://cdn4.iconfinder.com/data/icons/ballicons-2-free/100/pencil-128.png" title="¡Primer comentario!" alt="¡Primer comentario!">
+                            <span class="trofeo-desb"><i class="fa fa-heart fa-lg"></i>
                             </span>
                           </div>
                           <div class="col-sm-3 col-md-3 col-lg-4">
-                            <span class="trofeo-desb"><img src="https://cdn4.iconfinder.com/data/icons/ballicons-2-free/100/heart-128.png" title="1 me gusta" alt="1 me gusta">
+                            <span class="trofeo-desb"><i class="fa fa-heart fa-lg"></i>
                             </span>
                           </div>
                         <div class="col-sm-3 col-md-3 col-lg-4">
-                            <span class="trofeo-desb"><img src="https://cdn2.iconfinder.com/data/icons/ballicons-2-free/100/bowling-128.png" title="Jugador avanzado" alt="Jugador avanzado">
+                            <span class="trofeo-desb"><i class="fa fa-heart fa-lg"></i>
                             </span>
                           </div>
 
@@ -161,49 +161,49 @@
                       <h3 class="grupos-title">Grupos de {{ user_profile.username }}</h3>
                       <div class="wrapper-grupos">
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg"  alt="img-group">
+                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                               <i class="fa fa-users"> 50</i>
                               <i class="fa fa-heart"> 12</i>
                           </div>
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg"  alt="img-group">
+                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                           </div>
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" alt="img-group">
+                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                           </div>
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" alt="img-group">
+                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                           </div>
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" alt="img-group">
+                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                           </div>
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" alt="img-group">
+                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                           </div>
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" alt="img-group">
+                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                           </div>
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" alt="img-group">
+                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                           </div>
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" alt="img-group">
+                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                           </div>
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" alt="img-group">
+                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                           </div>
                           <div class="grupo-user">
-                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" alt="img-group">
+                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                           </div>
                       </div>
@@ -233,7 +233,7 @@
          <div class="wrapper">
             <div class="widget-wr">
                <div class="widget-wr-ans">
-              <img src="http://www.telegraph.co.uk/travel/destination/article125984.ece/ALTERNATES/w620/bostonwaterfront.jpg">
+              <img src="{{STATIC_URL}}img/2.jpg">
               <span class="wr-tittle">¿Debería viajar aquí?</span>
             </div>
              <div class="widget-options">
@@ -260,7 +260,7 @@
          <div class="wrapper">
             <div class="widget-wr">
                <div class="widget-wr-ans">
-              <img src="http://www.telegraph.co.uk/travel/destination/article125984.ece/ALTERNATES/w620/bostonwaterfront.jpg">
+              <img src="{{STATIC_URL}}img/1.jpg">
               <span class="wr-tittle">¿Debería viajar aquí?</span>
             </div>
              <div class="widget-options">
@@ -719,28 +719,28 @@
         <p href="#">Vacaciones en Tenerife.</p>
         <i class="fontawesome-heart"> 1.031</i>
         <a class="fontawesome-comment"> 432</a>
-      </span><img src="http://media1.onsugar.com/files/2014/04/09/296/n/28443503/addcb937ebb4186e_shutterstock_124808911.xxxlarge/i/Best-Ways-Stick-Your-Diet.jpg" alt="Photo">
+      </span><img src="{{STATIC_URL}}img/1.jpg" alt="Photo">
    </div></li>
   <li><div class="photo"><span class="text">
         <p>Vacaciones en Tenerife.</p>
         <i class="fontawesome-heart"> 1.031</i>
         <a class="fontawesome-comment"> 432</a>
-      </span></span><img src="http://www.anvari.org/db/cols/Best_Journalism_Photos/Best_Photo_6.jpg" alt="Photo"></div></li>
+      </span></span><img src="{{STATIC_URL}}img/1.jpg" alt="Photo"></div></li>
     <li><div class="photo"><span class="text">
         <p href="#">Vacaciones en Tenerife.</p>
         <i class="fontawesome-heart"> 1.031</i>
         <a class="fontawesome-comment"> 432</a>
-      </span><img src="http://www.anvari.org/db/cols/Best_Journalism_Photos/Best_Photo_6.jpg" alt="Photo"></div></li>
+      </span><img src="{{STATIC_URL}}img/1.jpg" alt="Photo"></div></li>
     <li><div class="photo"><span class="text">
         <p href="#">Vacaciones en Tenerife.</p>
         <i class="fontawesome-heart"> 1.031</i>
         <a class="fontawesome-comment"> 432</a>
-      </span><img src="http://www.anvari.org/db/cols/Best_Journalism_Photos/Best_Photo_6.jpg" alt="Photo"></div></li>
+      </span><img src="{{STATIC_URL}}img/1.jpg" alt="Photo"></div></li>
     <li><div class="photo"><span class="text">
         <p href="#">Vacaciones en Tenerife.</p>
         <i class="fontawesome-heart"> 1.031</i>
         <a class="fontawesome-comment"> 432</a>
-      </span><img src="http://www.wellhappypeaceful.com/wp-content/uploads/2011/12/Dog-Cat-Best-Friend.jpg" alt="Photo"></div></li>
+      </span><img src="{{STATIC_URL}}img/1.jpg" alt="Photo"></div></li>
   </ul>
 </section>
 
